--- a/src/app/widget/organism/bx-header/bx-header.component.html
+++ b/src/app/widget/organism/bx-header/bx-header.component.html
@@ -1,6 +1,6 @@
 <div class="content-wrapper">
     <nav class="navbar nav navbar-expand-lg ">
-        <div class="container-fluid">
+        <div class="container-fluid content-wrapper">
           <a class="navbar-brand nav__brand" routerLink="home">Quick<span>Mart</span> </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
